# week4

frontend_assignment/: package.json
frontend_assignment/components/: Form.tsx
frontend_assignment/pages/: index.tsx
rust_assignment/freivald/: Cargo.toml
rust_assignment/freivald/src/: lib.rs
