[package]
name = "freivald"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
ark-bls12-381 = "0.3.0"
ark-std = "0.3.0"

[dependencies.ndarray]
version = "0.15.4"
features = ["rayon", "matrixmultiply-threading"]

[dev-dependencies]
rstest = "0.13.0"
lazy_static = "1.4.0"
